added logo of spacex

--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@ body {
     border: none;
     font-family: inherit;
 }
+
+.underline {
+    border-bottom: 4px solid white;
+}
+
+#mainimg {
+    height: 100px;
+    width: 400px;
+}
