--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
-    color: white;
-    background-image: url(images/universe.jpg);
-    background-size: cover;
+    margin: 0;
+    color: #2e3236;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
 }
@@ -11,13 +10,25 @@ body {
     background: white;
     border: none;
     font-family: inherit;
+    color: #82a5ca;
+    font-weight: bold;
+}
+
+#title {
+    text-shadow: 0px 0px 4px lightblue;
 }
 
 .underline {
     border-bottom: 4px solid white;
 }
 
-#mainimg {
+#main-logo {
     height: 100px;
     width: 400px;
+}
+
+#hero {
+    background-image: url(https://media.giphy.com/media/ygAaR0n5RsyAM/giphy.gif);
+    background-size: cover;
+    padding: 10px 0 40px 0;
 }
